--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "quiz",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://opentdb.com/api.php?amount=10",
   "dependencies": {
     "axios": "^0.19.0",
-    "classnames": "^2.2.6",
+    "http-proxy-middleware": "^0.19.1",
+    "netlify-lambda": "^1.4.13",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -14,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lambda": "netlify-lambda serve src/lambda"
   },
   "eslintConfig": {
     "extends": "react-app"
