--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm build" 
-  functions = "bar-lambda"
+  command = "yarn build"
+  functions = "built-lambda"
   publish = "build"
