--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quiz",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://opentdb.com/api.php?amount=10",
   "dependencies": {
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.19.1",
